// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test customer schema 1`] = `
{
  "errorMessage": "",
  "errorPath": [],
  "isValid": true,
  "properties": {
    "address": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
      "properties": {
        "line1": {
          "errorMessage": "",
          "errorPath": [],
          "isValid": true,
        },
      },
    },
    "name": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
  },
}
`;

exports[`Test index type - regex - 2 1`] = `
{
  "errorMessage": "Should not be empty.",
  "errorPath": [
    "cars",
    "ruby",
    "vin",
  ],
  "isValid": false,
  "properties": {
    "address": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
      "properties": {
        "line1": {
          "errorMessage": "",
          "errorPath": [],
          "isValid": true,
        },
      },
    },
    "cars": {
      "errorMessage": "Should not be empty.",
      "errorPath": [
        "ruby",
        "vin",
      ],
      "isValid": false,
      "properties": {
        "ruby": {
          "errorMessage": "Should not be empty.",
          "errorPath": [
            "vin",
          ],
          "isValid": false,
          "properties": {
            "vin": {
              "errorMessage": "Should not be empty.",
              "errorPath": [],
              "isValid": false,
            },
          },
        },
        "rugby": {
          "errorMessage": "",
          "errorPath": [],
          "isValid": true,
          "properties": {
            "vin": {
              "errorMessage": "",
              "errorPath": [],
              "isValid": true,
            },
          },
        },
      },
    },
    "name": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
  },
}
`;

exports[`Test index type - regex - index type is undefined 1`] = `
{
  "errorMessage": "Required field.",
  "errorPath": [
    "cars",
  ],
  "isValid": false,
  "properties": {
    "cars": {
      "errorMessage": "Required field.",
      "errorPath": [],
      "isValid": false,
      "properties": {},
    },
    "name": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
  },
}
`;

exports[`Test index type - regex 1`] = `
{
  "errorMessage": "",
  "errorPath": [],
  "isValid": true,
  "properties": {
    "address": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
      "properties": {
        "line1": {
          "errorMessage": "",
          "errorPath": [],
          "isValid": true,
        },
      },
    },
    "cars": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
      "properties": {
        "rugby": {
          "errorMessage": "",
          "errorPath": [],
          "isValid": true,
          "properties": {
            "vin": {
              "errorMessage": "",
              "errorPath": [],
              "isValid": true,
            },
          },
        },
      },
    },
    "name": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
  },
}
`;

exports[`Test index type - required field - missing 1`] = `
{
  "errorMessage": "Required field.",
  "errorPath": [
    "cars",
    "ruby",
  ],
  "isValid": false,
  "properties": {
    "address": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
      "properties": {
        "line1": {
          "errorMessage": "",
          "errorPath": [],
          "isValid": true,
        },
      },
    },
    "cars": {
      "errorMessage": "Required field.",
      "errorPath": [
        "ruby",
      ],
      "isValid": false,
      "properties": {
        "ruby": {
          "errorMessage": "Required field.",
          "errorPath": [],
          "isValid": false,
          "properties": {},
        },
      },
    },
    "name": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
  },
}
`;

exports[`Test index type 1`] = `
{
  "errorMessage": "",
  "errorPath": [],
  "isValid": true,
  "properties": {
    "address": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
      "properties": {
        "line1": {
          "errorMessage": "",
          "errorPath": [],
          "isValid": true,
        },
      },
    },
    "cars": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
      "properties": {
        "rugby": {
          "errorMessage": "",
          "errorPath": [],
          "isValid": true,
          "properties": {
            "vin": {
              "errorMessage": "",
              "errorPath": [],
              "isValid": true,
            },
          },
        },
      },
    },
    "name": {
      "errorMessage": "",
      "errorPath": [],
      "isValid": true,
    },
  },
}
`;
